--- a/package.json
+++ b/package.json
@@ -1,18 +1,32 @@
 {
   "name": "pratibimb",
+  "homepage": "https://Pranav-Programmer.github.io/Pratibimb",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.1",
+    "@mui/material": "^5.14.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "gh-pages": "^5.0.0",
+    "mdb-react-ui-kit": "^6.1.0",
     "next": "13.4.12",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
+    "unsplash-js": "^7.0.18"
   }
 }
