--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pratibimb",
-  "homepage": "https://Pranav-Programmer.github.io/Pratibimb",
+  "homepage": "https://Pranav-Programmer.github.io/Pratibimb-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
